Fotos para alternar no background

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         </div>
         <div class="instagram-continue">
             <div class="group">
-                 <img src="/assets/img/instagram-logo.png" class="instagram-logo" alt="Logo do Instagram">
+                 <h1 class="instagram-logo">Catstagram</h1>
                  <div class="profile-photo">
-                 <img src="" alt="Foto de Perfil">
+                 <img src="/assets/img/foto-perfil.png" alt="Foto de Perfil">
             </div>
-            <a href="#" class="instagram-login">Continue como Yasmin</a>
+            <a href="#" class="instagram-login">Continue como Nala</a>
             <a href="#" class="instagram-logout">Remove account</a>
             </div> 
             <div class="group">
-                <p class="not-account">Não é Yasmin?</p>
+                <p class="not-account">Não é Nala?</p>
                 <p class="not-account">
                     <span class="link-blue">Alternar contas</span>
                     ou
